[FIX] html_editor: fix toggle list button style
Description of the issue:

- The toggle list button’s icon styles also apply to the code block’s language
  selector, causing overlap with the adjacent button and triggering a scrollbar

Solution:

- Restricted the toggle list button styles so they apply only to that button.

Steps to reproduced:

- Insert a toggle list (/togglelist) in a To-Do
- Add a code block (/code) inside the toggle description

=> The code block language button overlaps with the adjacent button (from 19.0)

task-5363926

--- a/addons/html_editor/static/src/others/embedded_components/core/toggle_block/toggle_block.scss
+++ b/addons/html_editor/static/src/others/embedded_components/core/toggle_block/toggle_block.scss
@@ -2,7 +2,7 @@
     [data-embedded-editable] > p {
         margin: 0;
     }
-    button:has(i.fa-caret-down, i.fa-caret-right){
+    button:has(i.fa-caret-down:only-child, i.fa-caret-right:only-child) {
         cursor: pointer !important;
         width: 1.5rem; // Equivalent to ps-4
         aspect-ratio: 1 / 1;
